fix(user.css): hide overflow-x in all LP modes

--- a/src/user.css
+++ b/src/user.css
@@ -2430,6 +2430,7 @@ button.arrow-btn {
 }
 
 /* hide horizontal scrollbar */
+.lyrics-lyricsContainer-LyricsContainer,
 .lyrics-lyricsContainer-SyncedLyricsPage {
   overflow-x: hidden;
 }
